# salarm

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README  icons.qrc  locale.pri  sAlarm.pro  salarm.desktop  salarm.pro  salarm.rc
locales/: salarm_cs_CZ.ts  salarm_en_US.ts
salarm/: CMakeLists.txt  constants.h  constants.h.cmake  database.cpp  database.h  keycatcher.cpp  keycatcher.h  main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  scheduledelegate.h  settings.cpp  settings.h  src.pro  timeoutdialog.cpp  timeoutdialog.h  xmlhandler.cpp  xmlhandler.h
salarm/locales/: untranslated.ts
salarm/resources/: icons.qrc
salarm/scheduler/: schedule.cpp  schedule.h  scheduledelegate.cpp  scheduledialog.cpp  scheduledialog.h  scheduler.cpp  scheduler.h  schedulermodel.cpp  schedulermodel.h  schedulerproxymodel.cpp  schedulerproxymodel.h
salarm/ui/: mainwindow.ui  optionsdialog.ui  scheduledialog.ui  timeoutdialog.ui
src/: constants.cpp  constants.h  database.cpp  database.h  keycatcher.cpp  main.cpp  main.h  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  qrc_icons.cpp  qrc_sounds.cpp  salarm.pro  schedule.cpp  schedule.h  scheduledelegate.cpp  scheduledelegate.h  scheduledialog.cpp  scheduledialog.h  scheduledialog.ui  scheduler.cpp  scheduler.h  schedulermodel.cpp  schedulermodel.h  schedulerproxymodel.cpp  settings.cpp  settings.h  src.pro  timeoutdialog.cpp  timeoutdialog.h  timeoutdialog.ui  timer.cpp  timer.h  ui_mainwindow.h  ui_optionsdialog.h  ui_scheduledialog.h
src/locale/: salarm_cs_CZ.ts
src/locales/: salarm_cs_CZ.ts  salarm_en_US.ts
src/resources/: icons.qrc
src/scheduler/: schedule.cpp  schedule.h  scheduledialog.cpp  scheduledialog.h  scheduler.cpp  scheduler.h  schedulermodel.cpp  schedulermodel.h  schedulerproxymodel.cpp  schedulerproxymodel.h
src/translations/: salarm_cs_CZ.ts  salarm_en_US.ts
src/ui/: mainwindow.ui  optionsdialog.ui  scheduledialog.ui
tests/: dump.xml
